<resources>
    <string name="app_name">Ghaleh Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="login_in">Log in</string>
    <string name="dont_have_account">Dont\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="ghale_logo">Ghale Logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_string">Continue</string>
    <string name="categories">Categories</string>
    <string name="lorem20">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a dapibus nibh. Etiam et malesuada ligula, porttitor sollicitudin dui. Pellentesque.</string>
    <string name="sign_out_frm_app">Sign out from app?</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
</resources>