<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.TestFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_test"
            android:layout_width="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/et_lastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/first_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_lastName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/last_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>