<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sheet_box"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_out_frm_app"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Are you sure whould like to sign out of your account ?"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:backgroundTint="@color/main"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:backgroundTint="@color/light"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>


    </LinearLayout>
</layout>